Fixed spacing.

--- a/styles/style.css
+++ b/styles/style.css
@@ -107,13 +107,12 @@ h2 {
 }
 
 h3 {
-  position: absolute;
-  margin-top: 10px;
-  margin-bottom: 15px;
+  display: block;
+  margin: 10px auto;
   font-weight: bold;
   font-size: 30px;
   color: #6D7993;
-  height: 50px;
+  max-width: 1000px;
   width: 100%;
   text-align: center;
 }
@@ -142,8 +141,15 @@ p {
 }
 
 .p-margin {
-  margin: 100px 25px;
-  margin-bottom: 25px;
+  margin: 25px;
+  margin-top: 100px;
+}
+
+.centering {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 560px;
 }
 
 .intro {
@@ -202,6 +208,9 @@ ul li {
 
 .chart1 {
   background: #D5D5D5;
+}
+
+.c1-container {
   display: flex;
 }
 
@@ -308,4 +317,11 @@ th, td {
 
 tr:hover {
   background: white;
+}
+
+.bar-container {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
 }
